  * Add debian/patches/any/submitted-getent-gshadow.diff to add gshadow 
    support to getent.
  * Add hppa/local-hppa-nptl.diff and hppa/local-ports-hppa-nptl.diff from
    Carlos O'Donell to keep ABI compatibility between linuxthreads and NPTL
    on HPPA.
  * debian/rules.d/tarball.mk: store the checkout revision in the tarball
    (file .svn-revision).

  [ Petr Salinger ]
  * Add kfreebsd/local-no-SOCK_NONBLOCK.diff to fix build on GNU/kFreeBSD.

  [ Samuel Thibault ]
  * Add debian/patches/hurd-i386/local-_dl_random.diff to fix build on
    hurd-i386.
  * Add debian/patches/hurd-i386/local-unwind-resume.diff to fix build on
    hurd-i386.
  * Fix debian/patches/hurd-i386/local-tls-support.diff to align up includes
    on Linux, to fix build.
  * Apply kfreebsd/local-no-SOCK_NONBLOCK.diff on hurd-i386 to fix build too.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 30 Jul 2009 23:42:16 +0200

eglibc (2.9-24) UNRELEASED; urgency=low

  * Remove any/cvs-pthread_mutex_lock.diff following upstream decision.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 30 Jul 2009 22:59:32 +0200

eglibc (2.9-23) unstable; urgency=low

  * debhelper.in/libc.postinst, sysdeps/depflags.pl: remove upgrade code
    for pre-etch installations.
  * Don't ship /etc/init.d/glibc.sh anymore: the GNU libc is now smart
    enough to print "FATAL: kernel too old" alone. This also speed up
    the boot a bit.
  * Don't ship /usr/share/doc/libc6/TODO, but keep the file in the 
    sources.
  * Don't ship /usr/share/doc/libc6/{README,PROJECT}.gz, they are 
    irrelevant for an already built GNU libc.
  * Move /usr/share/doc/libc6/{CONFORMANCE,NAMESPACE,NOTES}.gz to
    libc6-dev.
  * Move all upstream changelogs in glibc-docs, and install a small
    changelog file explaining the reason.
  * Ship README.libm in libc6-dev.
  * Update any/cvs-broken-dns.diff from upstream.
  * any/cvs-pthread_mutex_lock.diff: new patch from upstream to fix