@@ -1,3 +1,5 @@
+#svn-updates.diff
+
 locale/check-unknown-symbols.diff
 locale/fix-LC_COLLATE-rules.diff
 locale/preprocessor-collate-uli-sucks.diff
