@@ -100,6 +100,8 @@ eglibc (2.10.1-0exp1) experimental; urgency=low
     on HPPA.
   * debian/rules.d/tarball.mk: store the checkout revision in the tarball
     (file .svn-revision).
+  * debian/rules.d/tarball.mk: add an "update-from-upstream-svn" rule to 
+    automatically update debian/patches/svn-updates.diff.
 
   [ Petr Salinger ]
   * Add kfreebsd/local-no-SOCK_NONBLOCK.diff to fix build on GNU/kFreeBSD.
